--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ language: python
 
 # Ubuntu 18.04 ships with Python 3.6
 dist: bionic
-sudo: false
+sudo: true
 
-cache: pip
+cache:
+  directories:
+    - $HOME/rdiff-backup_testfiles
+
+cache:
+  - pip
 
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
@@ -20,14 +25,34 @@ addons:
     - libacl1-dev
     - librsync-dev
     - rdiff
+    - rsync
+    - python3-all-dev
+    - python3-pylibacl
+    - python3-pyxattr
+
+env:
+  - RDIFF_TEST_UID=1000
+  - ENV RDIFF_TEST_USER=testuser
+  - ENV RDIFF_TEST_GROUP=testuser
 
 install:
   - pip install -U pip tox virtualenv
+  - cd $HOME/build
+  - curl -LO https://github.com/ericzolf/rdiff-backup/releases/download/Testfiles2019-08-10/rdiff-backup_testfiles_2019-08-10.tar.gz
+  - sudo tar xvf *.tar.gz # This must be run as root
+  - sudo useradd -ms /bin/bash --uid ${RDIFF_TEST_UID} ${RDIFF_TEST_USER}
+  - ./rdiff-backup_testfiles.fix.sh ${RDIFF_TEST_USER} ${RDIFF_TEST_GROUP} # This must be run as root
 
 matrix:
   include:
     - python: 3.7
       script: tox -e flake8
       env: FLAKE8
+    - python: 3.7
+      script:
+        - pwd
+        - ls -la
+        - ./setup.py build
+      env: BUILD
     - python: 3.7
       script: tox -e py37
