WIP: docker service and tests via file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,26 @@ branches:
   except:
     - /^WIP-.*$/
 
+services:
+  - docker
+
 jobs:
   include:
     - stage: build docker image
       script:
+        - pwd
         - ls -la
+        - ls -la ..
         - docker build --pull --tag rdiff-backup-dev:debian-sid .
-    - stage: build
-      script:
-        - ls -la
-        - docker run --rm docker run -it -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid ./setup.py build
-    - stage: test
+    - stage: static tests
       script:
         - docker run --rm docker run -it -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid tox -c tox.ini -e flake8
+    - stage: build
+      script:
+        - pwd
+        - ls -la
+        - ls -la ..
+        - docker run --rm docker run -it -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid ./setup.py build
+    - stage: run-time tests
+      script:
+        - docker run --rm docker run -it -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid ./run-tests.sh
