--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,12 @@ branches:
 services:
   - docker
 
-before_install:
-  - pwd
-  - ls -la
-  - ls -la ..
+before_script:
   - docker build --pull --tag rdiff-backup-dev:debian-sid .
 
+# Runs in path /home/travis/build/rdiff-backup/rdiff-backup (git repo work directory)
+# One level up is an empty directory that can be used for artifacts, cache etc.
 script:
-  - pwd
-  - ls -la
-  - ls -la ..
-  - docker run --rm docker run -it -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid tox -c tox.ini -e flake8
-  - docker run --rm docker run -it -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid ./setup.py build
-  - docker run --rm docker run -it -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid ./run-tests.sh
+  - docker run --rm docker run -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid tox -c tox.ini -e flake8
+  - docker run --rm docker run -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid ./setup.py build
+  - docker run --rm docker run -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid ./run-tests.sh
