--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,14 @@ services:
 before_script:
   - docker build --pull --tag rdiff-backup-dev:debian-sid .
 
-script:
-  - docker run --rm -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid make test-static
-  - docker run --rm -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid make build
-  - docker run --rm -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid make test-runtime
+matrix:
+  include:
+    - env: Test static
+      script: docker run --rm -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid make test-static
+    - env: Test build
+      script: docker run --rm -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid make build
+    - env: Test runtime
+      script: docker run --rm -i -v ${PWD}/..:/build -w /build/rdiff-backup rdiff-backup-dev:debian-sid make test-runtime
 
 after_script:
   - pwd
