--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ deploy:
     on:
       tags: true
       all_branches: true
-      condition: $MAKE_STEP =~ ^(bdist_wheel)$ && $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+((a|b|rc)[0-9]+)?\.dev[0-9]+$
+      condition: $MAKE_STEP =~ ^(bdist_wheel|bdist_win)$ && $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+((a|b|rc)[0-9]+)?\.dev[0-9]+$
       # TODO add |bdist_win to release also Windows wheel
   - provider: pypi
     user: "__token__"
